fix swagger, remove csrf, cors handling, veryfy emails
